--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,24 +2,29 @@
   "compilerOptions": {
     "rootDir": "./src",
     "outDir": "./dist",
-    "allowJs": false,
+    "allowJs": true,
     "allowSyntheticDefaultImports": true,
     "emitDecoratorMetadata": true,
     "esModuleInterop": true,
     "experimentalDecorators": true,
-    "lib": ["ES2021", "DOM", "es6", "DOM.Iterable"],
+    "lib": ["ES2021", "dom", "es6", "dom.iterable", "esnext"],
     "module": "es2020",
     "moduleResolution": "node",
     "preserveConstEnums": true,
     "skipLibCheck": true,
     "strictNullChecks": true,
+    "forceConsistentCasingInFileNames": true,
     "target": "es6",
     "sourceMap": true,
     "isolatedModules": false,
-    "strict": true
-    // "noUnusedLocals": true,
-    // "noUnusedParameters": true,
+    "strict": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noFallthroughCasesInSwitch": true,
+    "resolveJsonModule": true,
+    "noEmit": true,
+    "jsx": "react-jsx"
   },
-  "include": ["**/*.ts"],
+  "include": ["src", "@types"],
   "exclude": ["node_modules"]
 }
