--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
     "@web/dev-server": "^0.3.0",
+    "jquery": "^3.7.1",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "styled-components": "^6.0.7",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -46,7 +50,6 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://github.com/nastiaknik/goit-typescript-hw#readme",
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -54,6 +57,7 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@types/lodash": "^4.14.195"
   }
 }
