--- a/package.json
+++ b/package.json
@@ -1,8 +1,6 @@
 {
   "name": "goit-typescript-hw",
-  "version": "1.0.0",
-  "description": "",
-  "license": "ISC",
+  "version": "0.1.0",
   "private": true,
   "homepage": "https://nastiaknik.github.io/goit-typescript-hw/",
   "dependencies": {
@@ -13,6 +11,8 @@
     "@types/node": "^16.18.46",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
+    "@types/lodash": "^4.14.195",
+    "@types/styled-components": "^5.1.26",
     "@web/dev-server": "^0.3.0",
     "jquery": "^3.7.1",
     "lodash": "^4.17.21",
@@ -22,7 +22,6 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
     "styled-components": "^6.0.7",
-    "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -32,14 +31,11 @@
     "eject": "react-scripts eject",
     "lint:js": "eslint src/**/*.{js,jsx}"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/nastiaknik/goit-typescript-hw.git"
-  },
-  "keywords": [],
-  "author": "",
-  "bugs": {
-    "url": "https://github.com/nastianik/goit-typescript-hw/issues"
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "browserslist": {
     "production": [
@@ -53,16 +49,7 @@
       "last 1 safari version"
     ]
   },
-  "main": "index.tsx",
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@types/lodash": "^4.14.195",
-    "@types/styled-components": "^5.1.26"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
