Revert "compile ts files"

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,13 +15,14 @@
     "strictNullChecks": true,
     "forceConsistentCasingInFileNames": true,
     "target": "es6",
+    "sourceMap": true,
     "isolatedModules": false,
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
     "resolveJsonModule": true,
-    "noEmit": false,
+    "noEmit": true,
     "jsx": "react-jsx"
   },
   "include": ["src", "@types"],
