--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "goit-typescript-hw",
-  "version": "0.1.0",
+  "version": "1.0.0",
+  "description": "",
+  "license": "ISC",
   "private": true,
-  "homepage": "https://nastiaknik.github.io/goit-typescript-hw/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -11,8 +12,6 @@
     "@types/node": "^16.18.46",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
-    "@types/lodash": "^4.14.195",
-    "@types/styled-components": "^5.1.26",
     "@web/dev-server": "^0.3.0",
     "jquery": "^3.7.1",
     "lodash": "^4.17.21",
@@ -22,20 +21,24 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
     "styled-components": "^6.0.7",
+    "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "lint:js": "eslint src/**/*.{js,jsx}"
+    "eject": "react-scripts eject"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/nastiaknik/goit-typescript-hw.git"
+  },
+  "homepage": "https://nastiaknik.github.io/goit-typescript-hw/",
+  "keywords": [],
+  "author": "",
+  "bugs": {
+    "url": "https://github.com/nastianik/goit-typescript-hw/issues"
   },
   "browserslist": {
     "production": [
@@ -49,7 +52,14 @@
       "last 1 safari version"
     ]
   },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@types/lodash": "^4.14.195"
   }
 }
