--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
   "name": "goit-typescript-hw",
   "version": "1.0.0",
-  "description": "",
-  "license": "ISC",
   "private": true,
+  "homepage": "https://nastiaknik.github.io/goit-typescript-hw/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -12,6 +11,8 @@
     "@types/node": "^16.18.46",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
+    "@types/lodash": "^4.14.195",
+    "@types/styled-components": "^5.1.26",
     "@web/dev-server": "^0.3.0",
     "jquery": "^3.7.1",
     "lodash": "^4.17.21",
@@ -28,17 +29,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/nastiaknik/goit-typescript-hw.git"
-  },
-  "homepage": "https://nastiaknik.github.io/goit-typescript-hw/",
-  "keywords": [],
-  "author": "",
-  "bugs": {
-    "url": "https://github.com/nastianik/goit-typescript-hw/issues"
+    "eject": "react-scripts eject",
+    "lint:js": "eslint dist/**/*.{js,jsx}"
   },
   "browserslist": {
     "production": [
@@ -59,7 +51,6 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@types/lodash": "^4.14.195"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
